<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ActivityInfo">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="26dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/limitation"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/TODO"
        app:layout_constraintBottom_toTopOf="@+id/version"
        app:srcCompat="@drawable/limitation"
        tools:ignore="ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/version"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>