<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/l_scale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:fontFamily="sans-serif-light"
                android:text="@string/scale"
                android:textAlignment="center"
                android:textSize="25dp"
                tools:ignore="SpUsage"/>

            <TextView
                android:id="@+id/tv_scale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:fontFamily="@font/aldrich"
                android:text="@string/scale"
                android:textAlignment="center"
                android:textSize="30dp"
                tools:ignore="SpUsage"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/file96"
            android:contentDescription="@string/TODO" />

    </LinearLayout>


    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/tv_sourceСrdnts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/Source_coordinates"
        android:textAlignment="center"
        android:textSize="25dp"
        tools:ignore="SpUsage"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/aldrich"
            android:text="@string/latitude"
            android:textAlignment="center"
            android:textSize="25dp"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/tv_longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/aldrich"
            android:text="@string/longitude"
            android:textAlignment="center"
            android:textSize="25dp"
            tools:ignore="SpUsage"/>

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="60dp"
        android:background="@color/black" />



    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/tv_borders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/BordersOfTheFrame"
        android:textAlignment="center"
        android:textSize="25dp"
        tools:ignore="SpUsage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/l_north"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/aldrich"
            android:textSize="30dp"
            tools:ignore="SpUsage"
            android:textAlignment="center"
            android:text="@string/north" />

        <TextView
            android:id="@+id/tv_north"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/aldrich"
            android:text="@string/north"
            android:textAlignment="center"
            android:textSize="30dp"
            tools:ignore="SpUsage"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/l_south"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10sp"
            android:fontFamily="@font/aldrich"
            android:text="@string/south"
            android:textAlignment="center"
            android:textSize="30dp"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/tv_south"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:layout_weight="1"
            android:text="@string/south"
            android:textAlignment="center"
            android:textSize="30dp"
            tools:ignore="SpUsage"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/l_west"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/west"
            android:textAlignment="center"
            android:textSize="30dp"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/tv_west"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/west"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="30dp"
            tools:ignore="SpUsage"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/l_east"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/east"
            android:textAlignment="center"
            android:textSize="30dp"
            tools:ignore="SpUsage"/>

        <TextView
            android:id="@+id/tv_east"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/east"
            android:textAlignment="center"
            android:textSize="30dp"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="60sp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/tv_nomenclature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/nomenclature"
        android:textAlignment="center"
        android:textSize="50dp"
        tools:ignore="SpUsage"/>



</LinearLayout>